--- a/domestic.yaml
+++ b/domestic.yaml
@@ -92,6 +92,7 @@ payload:
   
   # DIRECT DOWNLOAD 
   - DOMAIN-SUFFIX,1fichier.com
+  - DOMAIN-SUFFIX,userscloud.net
   - DOMAIN-SUFFIX,userscloud.com
   - DOMAIN-SUFFIX,6bt0.com
 
