remove hamreus.com from the list

--- a/domestic.yaml
+++ b/domestic.yaml
@@ -121,6 +121,6 @@ payload:
   - DOMAIN,gamedownloads-rockstargames-com.akamaized.net
 
   #看漫画
-  - DOMAIN-SUFFIX,hamreus.com
+  #- DOMAIN-SUFFIX,hamreus.com
   - DOMAIN-SUFFIX,manhuagui.com
 
