- DOMAIN,lol.dyn.riotcdn.net

--- a/domestic.yaml
+++ b/domestic.yaml
@@ -120,6 +120,9 @@ payload:
   - DOMAIN,gamedownloads.rockstargames.com
   - DOMAIN,gamedownloads-rockstargames-com.akamaized.net
 
+  #Riot download
+  - DOMAIN,lol.dyn.riotcdn.net
+
   #看漫画
   #- DOMAIN-SUFFIX,hamreus.com
   - DOMAIN-SUFFIX,manhuagui.com
