--- a/domestic.yaml
+++ b/domestic.yaml
@@ -125,6 +125,7 @@ payload:
 
   #LOL VOICE
   - DOMAIN,lolsnxp.www.vivox.com
+  - DOMAIN,lolsnxp.vivox.com
 
   #看漫画
   #- DOMAIN-SUFFIX,hamreus.com
