- DOMAIN-SUFFIX,vivox.com

--- a/domestic.yaml
+++ b/domestic.yaml
@@ -124,8 +124,9 @@ payload:
   - DOMAIN,lol.dyn.riotcdn.net
 
   #LOL VOICE
-  - DOMAIN,lolsnxp.www.vivox.com
-  - DOMAIN,lolsnxp.vivox.com
+  #- DOMAIN,lolsnxp.www.vivox.com
+  #- DOMAIN,lolsnxp.vivox.com
+  - DOMAIN-SUFFIX,vivox.com
 
   #NVIDIA download
   - DOMAIN,ota-downloads.nvidia.com
