--- a/domestic.yaml
+++ b/domestic.yaml
@@ -130,6 +130,9 @@ payload:
 
   #NVIDIA download
   - DOMAIN,ota-downloads.nvidia.com
+  #AMD download
+  - DOMAIN,drivers.amd.com
+  
   #看漫画
   #- DOMAIN-SUFFIX,hamreus.com
   - DOMAIN-SUFFIX,manhuagui.com
