--- a/domestic.yaml
+++ b/domestic.yaml
@@ -121,8 +121,8 @@ payload:
   - DOMAIN,gamedownloads-rockstargames-com.akamaized.net
 
   #Riot download
-  #- DOMAIN,lol.dyn.riotcdn.net
-  - DOMAIN-SUFFIX,dyn.riotcdn.net
+  - DOMAIN,lol.dyn.riotcdn.net
+  #- DOMAIN-SUFFIX,dyn.riotcdn.net
 
 
   #LOL VOICE
