--- a/domestic.yaml
+++ b/domestic.yaml
@@ -122,7 +122,7 @@ payload:
 
   #Riot download
   #- DOMAIN,lol.dyn.riotcdn.net
-  #- DOMAIN-SUFFIX,dyn.riotcdn.net
+  - DOMAIN-SUFFIX,dyn.riotcdn.net
 
 
   #LOL VOICE
