--- a/domestic.yaml
+++ b/domestic.yaml
@@ -147,3 +147,14 @@ payload:
 
   # twitch
   #- DOMAIN,d3aqoihi2n8ty8.cloudfront.net
+
+  # Apple music
+  - DOMAIN,aod-ssl.itunes.apple.com
+  - DOMAIN,aod.itunes.apple.com
+  - DOMAIN,audio-ssl.itunes.apple.com
+  - DOMAIN,audio.itunes.apple.com
+  - DOMAIN,mvod.itunes.apple.com
+  - DOMAIN,streamingaudio.itunes.apple.com
+  - DOMAIN-SUFFIX,applemusic.com
+  - DOMAIN-SUFFIX,blobstore.apple.com
+  - DOMAIN-SUFFIX,music.apple.com
