- DOMAIN-SUFFIX,buzzheavier.com

--- a/domestic.yaml
+++ b/domestic.yaml
@@ -158,3 +158,5 @@ payload:
   #- DOMAIN-SUFFIX,applemusic.com
   #- DOMAIN-SUFFIX,blobstore.apple.com
   #- DOMAIN-SUFFIX,music.apple.com
+
+  - DOMAIN-SUFFIX,buzzheavier.com
