- DOMAIN-SUFFIX,ghostland.at

--- a/domestic.yaml
+++ b/domestic.yaml
@@ -160,3 +160,6 @@ payload:
   #- DOMAIN-SUFFIX,music.apple.com
 
   - DOMAIN-SUFFIX,buzzheavier.com
+
+  # Switch game
+  - DOMAIN-SUFFIX,ghostland.at
