- DOMAIN-SUFFIX,leagueoflegends.com

--- a/Proxy.yaml
+++ b/Proxy.yaml
@@ -77,3 +77,6 @@
   - DOMAIN-SUFFIX,mikanani.me
 
   - DOMAIN-SUFFIX,ipleak.net
+
+  # league of legend official website
+  - DOMAIN-SUFFIX,leagueoflegends.com
