- DOMAIN,lolsnxp.www.vivox.com

--- a/domestic.yaml
+++ b/domestic.yaml
@@ -128,7 +128,7 @@ payload:
 
 
   #LOL VOICE
-  #- DOMAIN,lolsnxp.www.vivox.com
+  - DOMAIN,lolsnxp.www.vivox.com
   #- DOMAIN,lolsnxp.vivox.com
   #- DOMAIN-SUFFIX,vivox.com
 
