--- a/domestic.yaml
+++ b/domestic.yaml
@@ -128,9 +128,9 @@ payload:
 
 
   #LOL VOICE
-  - DOMAIN,lolsnxp.www.vivox.com
+  #- DOMAIN,lolsnxp.www.vivox.com
   #- DOMAIN,lolsnxp.vivox.com
-  #- DOMAIN-SUFFIX,vivox.com
+  - DOMAIN-SUFFIX,vivox.com
 
   #NVIDIA download
   - DOMAIN,ota-downloads.nvidia.com
