- DOMAIN-SUFFIX,spyderrock.com

--- a/domestic.yaml
+++ b/domestic.yaml
@@ -136,3 +136,6 @@ payload:
   #- DOMAIN-SUFFIX,tailscale.com
   #- DOMAIN-SUFFIX,tailscale.io
   #- DOMAIN-SUFFIX,ts.net
+
+  #download
+  - DOMAIN-SUFFIX,spyderrock.com
