- DOMAIN-SUFFIX,mxcontent.net

--- a/domestic.yaml
+++ b/domestic.yaml
@@ -73,6 +73,7 @@ payload:
   - DOMAIN-SUFFIX,userscloud.com
   - DOMAIN-SUFFIX,spyderrock.com
   - DOMAIN-SUFFIX,gofile.io
+  - DOMAIN-SUFFIX,mxcontent.net
   
 
   #epicgames download
