--- a/domestic.yaml
+++ b/domestic.yaml
@@ -72,8 +72,8 @@ payload:
   - DOMAIN-SUFFIX,userscloud.net
   - DOMAIN-SUFFIX,userscloud.com
   - DOMAIN-SUFFIX,spyderrock.com
-  - DOMAIN-SUFFIX,gofile.io
   - DOMAIN-SUFFIX,mxcontent.net
+  - DOMAIN-SUFFIX,fastupload.ioss
   
 
   #epicgames download
