--- a/domestic.yaml
+++ b/domestic.yaml
@@ -135,3 +135,6 @@ payload:
   #- DOMAIN-SUFFIX,tailscale.io
   #- DOMAIN-SUFFIX,ts.net
 
+  #dandanplay download
+   - DOMAIN-SUFFIX,dandanplay.com
+   - DOMAIN-SUFFIX,dandanplay.net
