--- a/domestic.yaml
+++ b/domestic.yaml
@@ -140,4 +140,5 @@ payload:
    - DOMAIN-SUFFIX,dandanplay.net
     #whisper speech-to-text
    - DOMAIN,openaipublic.azureedge.net
-
+    #hf LLM download
+   - DOMAIN,cdn-lfs-us-1.hf.co
