--- a/ProxyDNS.yaml
+++ b/ProxyDNS.yaml
@@ -1,7 +1,2 @@
 payload:
-  
-  - DOMAIN-SUFFIX,000webhost.com
-  - DOMAIN-SUFFIX,030buy.com
-
-  - DOMAIN-SUFFIX,msftconnecttest.com
-  - DOMAIN-SUFFIX,msftncsi.com
+  - DOMAIN-SUFFIX,linkedin.com
