- DOMAIN-KEYWORD,ubuntu

--- a/domestic.yaml
+++ b/domestic.yaml
@@ -142,3 +142,5 @@ payload:
   - DOMAIN,openaipublic.azureedge.net
    #hf LLM download
   - DOMAIN,cdn-lfs-us-1.hf.co
+   #ubuntu
+  - DOMAIN-KEYWORD,ubuntu
