--- a/refuse.yaml
+++ b/refuse.yaml
@@ -18,4 +18,7 @@
     - DOMAIN,stun.chat.bilibili.com
     - DOMAIN-KEYWORD,pcdn
 
+    - AND,((DOMAIN-SUFFIX,googlevideo.com),(NETWORK,UDP))
+
+
     
