--- a/domestic.yaml
+++ b/domestic.yaml
@@ -152,3 +152,8 @@ payload:
 
   # lagrange
   - DOMAIN,sign.lagrangecore.org
+
+  # tailscale
+  - DOMAIN-SUFFIX,tailscale.com
+  - DOMAIN-SUFFIX,tailscale.io
+  - DOMAIN-SUFFIX,ts.net
