--- a/Proxy.yaml
+++ b/Proxy.yaml
@@ -87,5 +87,7 @@
   
   #linkedin
   - DOMAIN-SUFFIX,linkedin.com
-
+  #BT
   - DOMAIN-SUFFIX,bt4gprx.com
+  #astrbot
+  - DOMAIN-SUFFIX,soulter.top
