#- AND,((DOMAIN-SUFFIX,googlevideo.com),(NETWORK,UDP))

--- a/refuse.yaml
+++ b/refuse.yaml
@@ -17,8 +17,8 @@
     - DOMAIN,stun-1.chat.bilibili.com
     - DOMAIN,stun.chat.bilibili.com
     - DOMAIN-KEYWORD,pcdn
-
-    - AND,((DOMAIN-SUFFIX,googlevideo.com),(NETWORK,UDP))
+    # test youtube video on UDP
+    #- AND,((DOMAIN-SUFFIX,googlevideo.com),(NETWORK,UDP))
 
     - DOMAIN,public.tracker.vraphim.com
 
