--- a/Proxy.yaml
+++ b/Proxy.yaml
@@ -93,3 +93,11 @@
   #- DOMAIN-SUFFIX,soulter.top
 
   - DOMAIN,vless.query.dns.army
+
+  #Notion
+  - DOMAIN-SUFFIX,notion-static.com
+  - DOMAIN-SUFFIX,notion.com
+  - DOMAIN-SUFFIX,notion.new
+  - DOMAIN-SUFFIX,notion.site
+  - DOMAIN-SUFFIX,notion.so
+  - DOMAIN-SUFFIX,notionusercontent.com
