remove opgg from domestic

--- a/domestic.yaml
+++ b/domestic.yaml
@@ -147,8 +147,8 @@ payload:
   - DOMAIN-KEYWORD,ubuntu
 
   # op.gg
-  - DOMAIN-SUFFIX,op.gg
-  - DOMAIN-SUFFIX,opgg-static.akamaized.net
+  #- DOMAIN-SUFFIX,op.gg
+  #- DOMAIN-SUFFIX,opgg-static.akamaized.net
 
   # lagrange
   - DOMAIN,sign.lagrangecore.org
