#try to speed up steamdb   - DOMAIN-SUFFIX,steamdb.info

--- a/domestic.yaml
+++ b/domestic.yaml
@@ -164,3 +164,6 @@ payload:
 
   #try to speed up unlock cloudflare
   - DOMAIN,challenges.cloudflare.com
+
+  #try to speed up steamdb
+  - DOMAIN-SUFFIX,steamdb.info
