- DOMAIN-SUFFIX,tavily.com

--- a/Proxy.yaml
+++ b/Proxy.yaml
@@ -103,6 +103,9 @@
   - DOMAIN-SUFFIX,notion.site
   - DOMAIN-SUFFIX,notion.so
   - DOMAIN-SUFFIX,notionusercontent.com
+  
+  #tavily.com
+  - DOMAIN-SUFFIX,tavily.com
 
   #deepwiki
   - DOMAIN-SUFFIX,deepwiki.com
