Restore and update payload entries in Proxy.yaml

--- a/Proxy.yaml
+++ b/Proxy.yaml
@@ -108,4 +108,8 @@
   - DOMAIN-SUFFIX,tavily.com
 
   #deepwiki
+
   - DOMAIN-SUFFIX,deepwiki.com
+
+  #unblockneteasemusic
+  - DOMAIN,music-api.gdstudio.xyz
